syntax = "proto3";

package payment;

option go_package = "./proto"; 

service PaymentService {
    rpc SendPayment (PaymentRequest) returns (PaymentResponse) {}
}

message PaymentRequest {
    string user = 1;
    int32 amount = 2;
}

message PaymentResponse {
    string confirmation = 1;
}